plugins {
	id 'fabric-loom' version '1.0-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group
def local_bclib = findProject(':BCLib') != null

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
        maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
        maven { url = "https://maven.terraformersmc.com/" }
        maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
        maven { url "https://cursemaven.com" }
        maven { url 'https://maven.kyrptonaught.dev' }
        maven { url "https://maven.shedaniel.me/" }
        maven { url "https://maven.dblsaiko.net/" }
        maven { url "https://maven.fabricmc.net/" }
        maven { url 'https://maven.blamejared.com' }
        maven { url 'https://jitpack.io' }
        maven { url = "https://dvs1.progwml6.com/files/maven/" }
        maven { url = "https://modmaven.dev" }
        maven { url = "https://api.modrinth.com/maven" }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
    modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19.3:4.0.2'
	modImplementation ("com.terraformersmc:modmenu:5.0.2")

    modImplementation "dev.emi:trinkets:3.5.0"

	    println "Using local BCLib: ${local_bclib}"
    if (local_bclib){		
        implementation( project(path:":BCLib", configuration: 'dev') )
    } else {
        modImplementation "curse.maven:bclib-495191:4162884"
    }
    modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta59-1.19'
	include 'net.kyrptonaught:customportalapi:0.0.1-beta59-1.19'
	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
